--- a/BookStore-UI/_Imports.razor
+++ b/BookStore-UI/_Imports.razor
@@ -10,3 +10,7 @@
 @using BookStore_UI.Static
 @using BookStore_UI.Models
 @using BookStore_UI.Contracts
+@using BlazorInputFile
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using System.IO
