--- a/BookStore-UI/Shared/NavMenu.razor
+++ b/BookStore-UI/Shared/NavMenu.razor
@@ -44,11 +44,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="books">
+            <NavLink class="nav-link" href="books/">
                 <span class="oi oi-book" aria-hidden="true"></span> Books
             </NavLink>
         </li>
-        <AuthorizeView Roles="Administrator">
+        @*<AuthorizeView Roles="Administrator">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="authors">
                     <span class="oi oi-copywriting" aria-hidden="true"></span> ADMIN
@@ -61,7 +61,7 @@
                     <span class="oi oi-copywriting" aria-hidden="true"></span> CUSTOMER
                 </NavLink>
             </li>
-        </AuthorizeView>
+        </AuthorizeView>*@
     </ul>
 </div>
 
