--- a/BookStore-UI/Pages/Index.razor
+++ b/BookStore-UI/Pages/Index.razor
@@ -1,7 +1,5 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h2>Welcome to your new app.</h2>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h3>This is BookStore App.</h3>
